--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <div>Hello World!</div>
+        <div class="world">Hello World!</div>
         <script src="./dist/main.js" async defer></script>
     </body>
 </html>
